--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,19 +12,6 @@
   }
   
   
-  /* .reset-button {
-    font-size: 16px;
-    height: 30px;
-    line-height: 8px;
-    margin-top: 20px;
-  }
-  
-  .win-loss-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 16px;
-  } */
-  
   button {
     background-color: purple;
     border-radius: 8px;
@@ -71,33 +58,9 @@
   }
 
   .quiz-timer{
-    margin: 0 auto;
+    margin: 0;
     padding-left: 1200px;
   }
-
-  /* .word-guess {
-    width: 55vw;
-    height: 400px;
-  }
-  
-  .results {
-    width: 30vw;
-    height: 400px;
-  } */
-  
-  /* .card {
-    background: radial-gradient(circle, rgba(240,230,140,1) 0%, rgba(187,124,33,0.604079131652661) 100%);
-    border: 1px solid #eceff1;
-    border-radius: 8px;
-    box-shadow: rgba(60, 64, 67, 2) 0 1px 2px 0,
-      rgba(60, 64, 67, 0.15) 0 2px 4px 3px;
-    margin: auto;
-    padding: 20px;
-  } */
-  
-  /* .word-blanks {
-    line-height: 360px;
-  } */
   
   .large-font {
     font-size: 3.5em;
@@ -105,46 +68,10 @@
     font-weight: bold;
   }
   
-  /* .timer {
-    height: 240px;
-    padding: 10px;
-    background: #13293d;
-    color: #fff;
-    text-align: center;
-  } */
   
   .timer-text {
     padding: 55px;
   }
-  
-  /* @media screen and (max-width: 1183px) {
-    main {
-      flex-direction: column;
-    }
-  
-    .word-guess,
-    .results {
-      width: 90vw;
-    }
-  
-    section {
-      background-color: white;
-      margin: 20px auto;
-      width: 92vw;
-    }
-  } */
-  
-  /* @media screen and (max-width: 504px) {
-    .large-font {
-      font-size: 2em;
-    }
-  
-    .reset-button {
-      font-size: 12px;
-      width: 20ox;
-      
-    }
-   */
     
    .timer {
       height: 200px;
